Fix NewApi lint errors for minSdk 24 compatibility
- Enable core library desugaring for java.time APIs (API 26)
- Replace Stream#toList() with collect(Collectors.toList()) (API 34)
- Replace String#formatted with String.format() in OpenSurfcastDbHelper (API 34)
- Add IoUtils.readStreamToString() for InputStream#readAllBytes replacement (API 33)
- Update parsers to use shared IoUtils utility

Co-authored-by: Cursor <cursoragent@cursor.com>